# tmux-watch

./: LICENSE  README.md  pyproject.toml  tw
src/tmux_watch/: cli.py
